// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClaimRequestStatusModal /> should hideModal if continue is clicked 1`] = `
<View
  center={true}
  fifth={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityLabel="claim-request-message"
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "fontFamily": "Lato",
        },
        Object {
          "backgroundColor": "#ffffff",
          "color": "#777777",
        },
        Object {
          "fontWeight": "bold",
        },
        Object {
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "marginBottom": 5,
        },
      ]
    }
    testID="claim-request-message"
  />
  <View
    center={true}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <Image
      collapsable={undefined}
      source={1}
      style={
        Object {
          "height": 30,
          "tintColor": "#777777",
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 30,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#333333",
            "color": "#ffffff",
          },
          null,
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "color": "#464646",
          },
          Object {
            "fontSize": 17,
            "fontWeight": "500",
            "letterSpacing": -0.42,
            "lineHeight": 21,
            "marginTop": 20,
          },
        ]
      }
    >
      Please wait…
    </Text>
  </View>
</View>
`;

exports[`<ClaimRequestStatusModal /> should match paid credential success, if sending state changes to success 1`] = `
<View
  center={true}
  fifth={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityLabel="claim-request-message"
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "fontFamily": "Lato",
        },
        Object {
          "backgroundColor": "#ffffff",
          "color": "#777777",
        },
        Object {
          "fontWeight": "bold",
        },
        Object {
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "marginBottom": 5,
        },
      ]
    }
    testID="claim-request-message"
  />
  <View
    center={true}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <Image
      collapsable={undefined}
      source={1}
      style={
        Object {
          "height": 30,
          "tintColor": "#777777",
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 30,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#333333",
            "color": "#ffffff",
          },
          null,
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "color": "#464646",
          },
          Object {
            "fontSize": 17,
            "fontWeight": "500",
            "letterSpacing": -0.42,
            "lineHeight": 21,
            "marginTop": 20,
          },
        ]
      }
    >
      Please wait…
    </Text>
  </View>
</View>
`;

exports[`<ClaimRequestStatusModal /> should match snapshot when pending popOver 1`] = `
<View
  center={true}
  fifth={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityLabel="claim-request-message"
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "fontFamily": "Lato",
        },
        Object {
          "backgroundColor": "#ffffff",
          "color": "#777777",
        },
        null,
        Object {
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "marginBottom": 5,
        },
      ]
    }
    testID="claim-request-message"
  >
    As soon as 
  </Text>
  <Text
    accessibilityLabel="claim-request-message"
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "fontFamily": "Lato",
        },
        Object {
          "backgroundColor": "#ffffff",
          "color": "#777777",
        },
        Object {
          "fontWeight": "bold",
        },
        Object {
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "marginBottom": 5,
        },
      ]
    }
    testID="claim-request-message"
  />
  <Text
    accessibilityLabel="claim-request-message"
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "fontFamily": "Lato",
        },
        Object {
          "backgroundColor": "#ffffff",
          "color": "#777777",
        },
        null,
        Object {
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "marginBottom": 5,
        },
      ]
    }
    testID="claim-request-message"
  >
     signs and issues 
  </Text>
  <Text
    accessibilityLabel="claim-request-message"
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "fontFamily": "Lato",
        },
        Object {
          "backgroundColor": "#ffffff",
          "color": "#777777",
        },
        Object {
          "fontWeight": "bold",
        },
        Object {
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "marginBottom": 5,
        },
      ]
    }
    testID="claim-request-message"
  >
    "Home Address"
  </Text>
  <View
    center={true}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <Image
      collapsable={undefined}
      source={1}
      style={
        Object {
          "height": 30,
          "tintColor": "#777777",
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 30,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#333333",
            "color": "#ffffff",
          },
          null,
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "color": "#464646",
          },
          Object {
            "fontSize": 17,
            "fontWeight": "500",
            "letterSpacing": -0.42,
            "lineHeight": 21,
            "marginTop": 20,
          },
        ]
      }
    >
      Please wait…
    </Text>
  </View>
</View>
`;

exports[`<ClaimRequestStatusModal /> should show arrow right and accepting text, if claim request is being sent 1`] = `
<View
  center={true}
  fifth={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityLabel="claim-request-message"
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "fontFamily": "Lato",
        },
        Object {
          "backgroundColor": "#ffffff",
          "color": "#777777",
        },
        Object {
          "fontWeight": "bold",
        },
        Object {
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "marginBottom": 5,
        },
      ]
    }
    testID="claim-request-message"
  />
  <View
    center={true}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <Image
      collapsable={undefined}
      source={1}
      style={
        Object {
          "height": 30,
          "tintColor": "#777777",
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 30,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#333333",
            "color": "#ffffff",
          },
          null,
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "color": "#464646",
          },
          Object {
            "fontSize": 17,
            "fontWeight": "500",
            "letterSpacing": -0.42,
            "lineHeight": 21,
            "marginTop": 20,
          },
        ]
      }
    >
      Please wait…
    </Text>
  </View>
</View>
`;

exports[`<ClaimRequestStatusModal /> should show arrow right and only Paying text if paid credential request is being sent 1`] = `
<View
  center={true}
  fifth={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityLabel="claim-request-message"
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "fontFamily": "Lato",
        },
        Object {
          "backgroundColor": "#ffffff",
          "color": "#777777",
        },
        Object {
          "fontWeight": "bold",
        },
        Object {
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "marginBottom": 5,
        },
      ]
    }
    testID="claim-request-message"
  />
  <View
    center={true}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <Image
      collapsable={undefined}
      source={1}
      style={
        Object {
          "height": 30,
          "tintColor": "#777777",
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 30,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#333333",
            "color": "#ffffff",
          },
          null,
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "color": "#464646",
          },
          Object {
            "fontSize": 17,
            "fontWeight": "500",
            "letterSpacing": -0.42,
            "lineHeight": 21,
            "marginTop": 20,
          },
        ]
      }
    >
      Please wait…
    </Text>
  </View>
</View>
`;

exports[`<ClaimRequestStatusModal /> should show check mark, token amount, if paid credential request is sent 1`] = `
<View
  center={true}
  fifth={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityLabel="claim-request-message"
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "fontFamily": "Lato",
        },
        Object {
          "backgroundColor": "#ffffff",
          "color": "#777777",
        },
        Object {
          "fontWeight": "bold",
        },
        Object {
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "marginBottom": 5,
        },
      ]
    }
    testID="claim-request-message"
  />
  <View
    center={true}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <Image
      collapsable={undefined}
      source={1}
      style={
        Object {
          "height": 30,
          "tintColor": "#777777",
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 30,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#333333",
            "color": "#ffffff",
          },
          null,
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "color": "#464646",
          },
          Object {
            "fontSize": 17,
            "fontWeight": "500",
            "letterSpacing": -0.42,
            "lineHeight": 21,
            "marginTop": 20,
          },
        ]
      }
    >
      Please wait…
    </Text>
  </View>
</View>
`;

exports[`<ClaimRequestStatusModal /> should show check mark, you accepted text, if claim request is sent 1`] = `
<View
  center={true}
  fifth={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessibilityLabel="claim-request-message"
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontSize": 17,
        },
        Object {
          "fontFamily": "Lato",
        },
        Object {
          "backgroundColor": "#ffffff",
          "color": "#777777",
        },
        Object {
          "fontWeight": "bold",
        },
        Object {
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "transparent",
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "marginBottom": 5,
        },
      ]
    }
    testID="claim-request-message"
  />
  <View
    center={true}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <Image
      collapsable={undefined}
      source={1}
      style={
        Object {
          "height": 30,
          "tintColor": "#777777",
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 30,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#333333",
            "color": "#ffffff",
          },
          null,
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "color": "#464646",
          },
          Object {
            "fontSize": 17,
            "fontWeight": "500",
            "letterSpacing": -0.42,
            "lineHeight": 21,
            "marginTop": 20,
          },
        ]
      }
    >
      Please wait…
    </Text>
  </View>
</View>
`;
